# chanyeops

./: .env  .replit  LOCAL_SETUP_GUIDE.md  README_WINDOWS.md  WINDOWS_DEPLOYMENT_COMPLETE.md  deploy_windows.bat  package-lock.json  package.json  package_for_windows.js  pyproject.toml  replit.md  start_app.bat  start_both_servers.py  test_qanything.js
attached_assets/: 01-register-page_1749277009356.html  02-login-page_1749276443927.html  03-home-page_1749277009357.html  04-chat-page_1749276443928.html  05-templates-page_1749276443928.html  06-search-page_1749277009358.html  07-admin-page_1749276443929.html  AdminPage_1749277043728.tsx  ChatPage_1749277043729.tsx  ForgotPasswordPage_1749277043729.tsx  HomePage_1749277043729.tsx  LoginPage_1749277043729.tsx  Pasted--FastAPI-mkdir-backend-fastapi-cd-backend-fastapi-mkdir-agent-api-services-1752815333501_1752815333502.txt  Pasted-import-React-from-react-import-Card-from-ui-card-import-Button-from-ui-button--1751393726347_1751393726348.txt  Pasted-import-React-from-react-import-Card-from-ui-card-import-Button-from-ui-button-1751392202552_1751392202554.txt  Pasted-import-React-from-react-import-Card-from-ui-card-import-Button-from-ui-button-1751393959793_1751393959794.txt  Pasted-import-React-from-react-import-Card-from-ui-card-import-Button-from-ui-button-1751394209761_1751394209761.txt  Pasted-import-React-from-react-import-Card-from-ui-card-import-Button-from-ui-button-1751394446518_1751394446518.txt  RegisterPage_1749277043730.tsx  SearchPage_1749277043730.tsx  TemplatesPage_1749277043730.tsx  index_1749277009358.html  (+7 more)
(+89 files in other folders)
