[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.28",
    "langchain>=0.3.26",
    "openai>=1.97.0",
    "uvicorn>=0.35.0",
    "langchain-community>=0.3.27",
    "pydantic>=2.11.7",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "aiofiles>=24.1.0",
]
